--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -46,50 +46,57 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Exploder\Demo\Scripts\CursorLocking.cs" />
-     <Compile Include="Assets\Exploder\Demo\Scripts\ExploderMouseLook.cs" />
-     <Compile Include="Assets\Exploder\Demo\Scripts\GrenadeController.cs" />
-     <Compile Include="Assets\Exploder\Demo\Scripts\GrenadeObject.cs" />
-     <Compile Include="Assets\Exploder\Demo\Scripts\PanelChairBomb.cs" />
-     <Compile Include="Assets\Exploder\Demo\Scripts\PanelResetScene.cs" />
-     <Compile Include="Assets\Exploder\Demo\Scripts\PanelThrowObject.cs" />
-     <Compile Include="Assets\Exploder\Demo\Scripts\RPGController.cs" />
-     <Compile Include="Assets\Exploder\Demo\Scripts\RobotScript.cs" />
-     <Compile Include="Assets\Exploder\Demo\Scripts\Rocket.cs" />
-     <Compile Include="Assets\Exploder\Demo\Scripts\ShotgunController.cs" />
-     <Compile Include="Assets\Exploder\Demo\Scripts\TargetManager.cs" />
-     <Compile Include="Assets\Exploder\Demo\Scripts\ThrowObject.cs" />
-     <Compile Include="Assets\Exploder\Demo\Scripts\UseObject.cs" />
-     <Compile Include="Assets\Exploder\Demo\Scripts\WeaponManager.cs" />
-     <Compile Include="Assets\Exploder\DemoClickExplode\DemoClickExplode.cs" />
-     <Compile Include="Assets\Exploder\DemoClickExplode\DemoClickExplode2D.cs" />
-     <Compile Include="Assets\Exploder\DemoClickExplode\DemoSelfExplode.cs" />
-     <Compile Include="Assets\Exploder\DemoSimple\DemoSimple.cs" />
-     <Compile Include="Assets\Exploder\Examples\ExplodeAllObjects.cs" />
-     <Compile Include="Assets\Exploder\Examples\HowToGetActiveFragments.cs" />
-     <Compile Include="Assets\Exploder\Exploder\Core\ArrayDictionary.cs" />
-     <Compile Include="Assets\Exploder\Exploder\Core\Contour.cs" />
-     <Compile Include="Assets\Exploder\Exploder\Core\LSHash.cs" />
-     <Compile Include="Assets\Exploder\Exploder\Core\MeshCutter.cs" />
-     <Compile Include="Assets\Exploder\Exploder\Core\MeshUtils.cs" />
-     <Compile Include="Assets\Exploder\Exploder\Core\Plane.cs" />
-     <Compile Include="Assets\Exploder\Exploder\Core\Polygon.cs" />
-     <Compile Include="Assets\Exploder\Exploder\Explodable.cs" />
-     <Compile Include="Assets\Exploder\Exploder\ExploderObject.cs" />
-     <Compile Include="Assets\Exploder\Exploder\ExploderOption.cs" />
-     <Compile Include="Assets\Exploder\Exploder\ExploderQueue.cs" />
-     <Compile Include="Assets\Exploder\Exploder\Fragment.cs" />
-     <Compile Include="Assets\Exploder\Exploder\FragmentPool.cs" />
-     <Compile Include="Assets\Exploder\Exploder\Utils\ExploderProfiler.cs" />
-     <Compile Include="Assets\Exploder\Exploder\Utils\ExploderSingleton.cs" />
-     <Compile Include="Assets\Exploder\Exploder\Utils\ExploderSlowMotion.cs" />
-     <Compile Include="Assets\Exploder\Exploder\Utils\ExploderUtils.cs" />
-     <Compile Include="Assets\Exploder\Exploder\Utils\HUDFPS.cs" />
-     <Compile Include="Assets\Exploder\Exploder\Utils\Hull2D.cs" />
-     <Compile Include="Assets\Exploder\Exploder\Utils\TestVertexColors.cs" />
-     <Compile Include="Assets\Exploder\Playmaker\CrackAction.cs" />
-     <Compile Include="Assets\Exploder\Playmaker\ExplodeAction.cs" />
-     <Compile Include="Assets\Exploder\Playmaker\ExplodeCrackedAction.cs" />
+     <Compile Include="Assets\Resources\Scripts\Characters\CharacterBase.cs" />
+     <Compile Include="Assets\Resources\Scripts\Characters\PlayerBase.cs" />
+     <Compile Include="Assets\Resources\Scripts\Characters\PlayerManager.cs" />
+     <Compile Include="Assets\Resources\Scripts\Characters\Rogue\Rogue.cs" />
+     <Compile Include="Assets\Resources\Scripts\Characters\Sorceress\Fireball.cs" />
+     <Compile Include="Assets\Resources\Scripts\Characters\Sorceress\Icicle_Shot.cs" />
+     <Compile Include="Assets\Resources\Scripts\Characters\Sorceress\MeteorController.cs" />
+     <Compile Include="Assets\Resources\Scripts\Characters\Sorceress\Sorcerer.cs" />
+     <Compile Include="Assets\Resources\Scripts\Characters\Warrior\Warrior.cs" />
+     <Compile Include="Assets\Resources\Scripts\Characters\Woodsman\HawkAI2.cs" />
+     <Compile Include="Assets\Resources\Scripts\Characters\Woodsman\Woodsman.cs" />
+     <Compile Include="Assets\Resources\Scripts\Characters\Woodsman\hawkSphere.cs" />
+     <Compile Include="Assets\Resources\Scripts\Characters\Woodsman\woodsBullet.cs" />
+     <Compile Include="Assets\Resources\Scripts\Characters\Woodsman\woodsSpecialBulletScript.cs" />
+     <Compile Include="Assets\Resources\Scripts\Characters\rewiredControl.cs" />
+     <Compile Include="Assets\Resources\Scripts\Coin.cs" />
+     <Compile Include="Assets\Resources\Scripts\DropGold.cs" />
+     <Compile Include="Assets\Resources\Scripts\Enemy\Boss\KingRestless.cs" />
+     <Compile Include="Assets\Resources\Scripts\Enemy\Boss\KingShockwave.cs" />
+     <Compile Include="Assets\Resources\Scripts\Enemy\EnemyArchtypeHorde.cs" />
+     <Compile Include="Assets\Resources\Scripts\Enemy\EnemyArchtypeMelee.cs" />
+     <Compile Include="Assets\Resources\Scripts\Enemy\EnemyArchtypeRanged.cs" />
+     <Compile Include="Assets\Resources\Scripts\Enemy\EnemyBase.cs" />
+     <Compile Include="Assets\Resources\Scripts\Enemy\EnemyManager.cs" />
+     <Compile Include="Assets\Resources\Scripts\Enemy\EnemySpawner.cs" />
+     <Compile Include="Assets\Resources\Scripts\Environment\MapManager.cs" />
+     <Compile Include="Assets\Resources\Scripts\Environment\Props\Arrow.cs" />
+     <Compile Include="Assets\Resources\Scripts\Environment\Props\DoorController.cs" />
+     <Compile Include="Assets\Resources\Scripts\Environment\Props\KeyController.cs" />
+     <Compile Include="Assets\Resources\Scripts\Environment\Props\LightFlicker.cs" />
+     <Compile Include="Assets\Resources\Scripts\Environment\Props\Potion.cs" />
+     <Compile Include="Assets\Resources\Scripts\Environment\Room\HordeRoom.cs" />
+     <Compile Include="Assets\Resources\Scripts\Environment\Triggers\ArrowShooter.cs" />
+     <Compile Include="Assets\Resources\Scripts\Environment\Triggers\AutoTrigger.cs" />
+     <Compile Include="Assets\Resources\Scripts\Environment\Triggers\CheckpointCollider.cs" />
+     <Compile Include="Assets\Resources\Scripts\Environment\Triggers\Doorway.cs" />
+     <Compile Include="Assets\Resources\Scripts\Environment\Triggers\FallingDeath.cs" />
+     <Compile Include="Assets\Resources\Scripts\Environment\Triggers\FlameTrap.cs" />
+     <Compile Include="Assets\Resources\Scripts\Environment\Triggers\InteractTrigger.cs" />
+     <Compile Include="Assets\Resources\Scripts\Environment\Triggers\MovingPlatform.cs" />
+     <Compile Include="Assets\Resources\Scripts\Environment\Triggers\ProjectileTrapObj.cs" />
+     <Compile Include="Assets\Resources\Scripts\Environment\Triggers\SpikeTrap.cs" />
+     <Compile Include="Assets\Resources\Scripts\Environment\Triggers\TimedTrap.cs" />
+     <Compile Include="Assets\Resources\Scripts\Environment\Triggers\TimedTrigger.cs" />
+     <Compile Include="Assets\Resources\Scripts\Environment\Triggers\TrapBase.cs" />
+     <Compile Include="Assets\Resources\Scripts\Environment\Triggers\TrapController.cs" />
+     <Compile Include="Assets\Resources\Scripts\Environment\Triggers\TriggerController.cs" />
+     <Compile Include="Assets\Resources\Scripts\Environment\Triggers\TriggerTrap.cs" />
+     <Compile Include="Assets\Resources\Scripts\Environment\cameraControl.cs" />
+     <Compile Include="Assets\Resources\Scripts\GUI\HealthScaling.cs" />
+     <Compile Include="Assets\Resources\Scripts\Gold.cs" />
      <Compile Include="Assets\Rewired\Examples\ControlRemapping1\Scripts\ControlRemappingDemo1.cs" />
      <Compile Include="Assets\Rewired\Examples\CustomControllersTouch\Scripts\CustomControllerDemo.cs" />
      <Compile Include="Assets\Rewired\Examples\CustomControllersTouch\Scripts\CustomControllerDemo_Player.cs" />
@@ -100,120 +107,68 @@
      <Compile Include="Assets\Rewired\Examples\FallbackJoystickIdentification\Scripts\FallbackJoystickIdentificationDemo.cs" />
      <Compile Include="Assets\Rewired\Examples\Shared\Scripts\Bullet.cs" />
      <Compile Include="Assets\Rewired\Internal\Scripts\InputManager.cs" />
-     <Compile Include="Assets\Scripts\Characters\CharacterBase.cs" />
-     <Compile Include="Assets\Scripts\Characters\PlayerBase.cs" />
-     <Compile Include="Assets\Scripts\Characters\PlayerManager.cs" />
-     <Compile Include="Assets\Scripts\Characters\Rogue\Rogue.cs" />
-     <Compile Include="Assets\Scripts\Characters\Sorceress\FBParticleBehavior.cs" />
-     <Compile Include="Assets\Scripts\Characters\Sorceress\Fireball.cs" />
-     <Compile Include="Assets\Scripts\Characters\Sorceress\Icicle_Shot.cs" />
-     <Compile Include="Assets\Scripts\Characters\Sorceress\MeteorController.cs" />
-     <Compile Include="Assets\Scripts\Characters\Sorceress\Sorcerer.cs" />
-     <Compile Include="Assets\Scripts\Characters\Warrior\Warrior.cs" />
-     <Compile Include="Assets\Scripts\Characters\Woodsman\HawkAI2.cs" />
-     <Compile Include="Assets\Scripts\Characters\Woodsman\Woodsman.cs" />
-     <Compile Include="Assets\Scripts\Characters\Woodsman\hawkSphere.cs" />
-     <Compile Include="Assets\Scripts\Characters\Woodsman\woodsBullet.cs" />
-     <Compile Include="Assets\Scripts\Characters\Woodsman\woodsSpecialBulletScript.cs" />
-     <Compile Include="Assets\Scripts\Characters\rewiredControl.cs" />
-     <Compile Include="Assets\Scripts\Coin.cs" />
-     <Compile Include="Assets\Scripts\DropGold.cs" />
-     <Compile Include="Assets\Scripts\Enemy\Boss\KingRestless.cs" />
-     <Compile Include="Assets\Scripts\Enemy\Boss\KingShockwave.cs" />
-     <Compile Include="Assets\Scripts\Enemy\EnemyAI.cs" />
-     <Compile Include="Assets\Scripts\Enemy\EnemyArchtypeHorde.cs" />
-     <Compile Include="Assets\Scripts\Enemy\EnemyArchtypeMelee.cs" />
-     <Compile Include="Assets\Scripts\Enemy\EnemyArchtypeRanged.cs" />
-     <Compile Include="Assets\Scripts\Enemy\EnemyBase.cs" />
-     <Compile Include="Assets\Scripts\Enemy\EnemyManager.cs" />
-     <Compile Include="Assets\Scripts\Enemy\EnemySpawner.cs" />
-     <Compile Include="Assets\Scripts\Enemy\enemyControl.cs" />
-     <Compile Include="Assets\Scripts\Environment\GameCamera.cs" />
-     <Compile Include="Assets\Scripts\Environment\MapManager.cs" />
-     <Compile Include="Assets\Scripts\Environment\Props\Arrow.cs" />
-     <Compile Include="Assets\Scripts\Environment\Props\DoorController.cs" />
-     <Compile Include="Assets\Scripts\Environment\Props\KeyController.cs" />
-     <Compile Include="Assets\Scripts\Environment\Props\LightFlicker.cs" />
-     <Compile Include="Assets\Scripts\Environment\Props\Potion.cs" />
-     <Compile Include="Assets\Scripts\Environment\Room\HordeRoom.cs" />
-     <Compile Include="Assets\Scripts\Environment\Triggers\ArrowShooter.cs" />
-     <Compile Include="Assets\Scripts\Environment\Triggers\AutoTrigger.cs" />
-     <Compile Include="Assets\Scripts\Environment\Triggers\CheckpointCollider.cs" />
-     <Compile Include="Assets\Scripts\Environment\Triggers\Doorway.cs" />
-     <Compile Include="Assets\Scripts\Environment\Triggers\DurationTrapObj.cs" />
-     <Compile Include="Assets\Scripts\Environment\Triggers\FallingDeath.cs" />
-     <Compile Include="Assets\Scripts\Environment\Triggers\FlameTrap.cs" />
-     <Compile Include="Assets\Scripts\Environment\Triggers\InteractTrigger.cs" />
-     <Compile Include="Assets\Scripts\Environment\Triggers\MovingPlatform.cs" />
-     <Compile Include="Assets\Scripts\Environment\Triggers\ProjectileTrapObj.cs" />
-     <Compile Include="Assets\Scripts\Environment\Triggers\SpikeTrap.cs" />
-     <Compile Include="Assets\Scripts\Environment\Triggers\TimedTrap.cs" />
-     <Compile Include="Assets\Scripts\Environment\Triggers\TimedTrigger.cs" />
-     <Compile Include="Assets\Scripts\Environment\Triggers\TrapBase.cs" />
-     <Compile Include="Assets\Scripts\Environment\Triggers\TrapController.cs" />
-     <Compile Include="Assets\Scripts\Environment\Triggers\TriggerController.cs" />
-     <Compile Include="Assets\Scripts\Environment\Triggers\TriggerTrap.cs" />
-     <Compile Include="Assets\Scripts\Environment\cameraControl.cs" />
-     <Compile Include="Assets\Scripts\GUI\HealthScaling.cs" />
-     <Compile Include="Assets\Scripts\Gold.cs" />
-     <Compile Include="Assets\ShaderForge\Example Assets\Scripts\EditorLabel.cs" />
-     <Compile Include="Assets\ShaderForge\Example Assets\Scripts\EnableCameraDepthInForward.cs" />
-     <Compile Include="Assets\SimpleParticlePack\Scripts\ParticleTester.cs" />
      <None Include="Assets\Shaders\Bookshelf_1_Mat.shader" />
-     <None Include="Assets\Scripts\Shaders\IceShader.shader" />
+     <None Include="Assets\Resources\Scripts\Shaders\IceShader.shader" />
      <None Include="Assets\Shaders\ReaperStatue_1_Mat.shader" />
      <None Include="Assets\Shaders\Table_1_Mat.shader" />
      <None Include="Assets\Shaders\SmallContainers_1_Mat.shader" />
-     <None Include="Assets\Scripts\Shaders\Steve 1.shader" />
+     <None Include="Assets\Resources\Scripts\Shaders\Steve 1.shader" />
      <None Include="Assets\Shaders\Wall_4_1_Mat.shader" />
      <None Include="Assets\Shaders\Floor_1_Mat.shader" />
-     <None Include="Assets\ShaderForge\Example Assets\Shaders\LightCone.shader" />
-     <None Include="Assets\Exploder\Demo\Standard Assets\Particles\Sources\Shaders\Particle Alpha Blend (Queue +100).shader" />
-     <None Include="Assets\ShaderForge\Readme.txt" />
+     <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\LightCone.shader" />
+     <None Include="Assets\Plugins\Exploder\Demo\Standard Assets\Particles\Sources\Shaders\Particle Alpha Blend (Queue +100).shader" />
+     <None Include="Assets\Plugins\ShaderForge\Readme.txt" />
      <None Include="Assets\Shaders\ColumnRound_1_Mat_B.shader" />
      <None Include="Assets\Shaders\Wall_Doorway_1_Mat.shader" />
      <None Include="Assets\Rewired\Documentation\licences.txt" />
-     <None Include="Assets\ShaderForge\Example Assets\Shaders\MaterialPlatform.shader" />
+     <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\MaterialPlatform.shader" />
      <None Include="Assets\Shaders\StoneSingles_1_Mat.shader" />
-     <None Include="Assets\Scripts\Shaders\NewShader.shader" />
+     <None Include="Assets\Resources\Scripts\Shaders\NewShader.shader" />
      <None Include="Assets\Rewired\Documentation\ReadMe.txt" />
-     <None Include="Assets\ShaderForge\Example Assets\Shaders\Vegetation.shader" />
+     <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\Vegetation.shader" />
      <None Include="Assets\Shaders\Scrolls_1_Mat.shader" />
-     <None Include="Assets\ShaderForge\Example Assets\Shaders\VertexAnimation.shader" />
+     <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\VertexAnimation.shader" />
      <None Include="Assets\Shaders\ColumnsRuined_1_Mat.shader" />
-     <None Include="Assets\ShaderForge\Example Assets\Shaders\Cubemaps.shader" />
-     <None Include="Assets\ShaderForge\Example Assets\Shaders\Refraction.shader" />
-     <None Include="Assets\Exploder\Demo\Shaders\VertexColor.shader" />
+     <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\Cubemaps.shader" />
+     <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\Refraction.shader" />
+     <None Include="Assets\Plugins\Exploder\Demo\Shaders\VertexColor.shader" />
      <None Include="Assets\Shaders\TombTop_1_Mat.shader" />
-     <None Include="Assets\ShaderForge\Example Assets\Shaders\Parallax.shader" />
-     <None Include="Assets\Scripts\Shaders\Steve.shader" />
-     <None Include="Assets\ShaderForge\Example Assets\Shaders\LightWrapping.shader" />
+     <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\Parallax.shader" />
+     <None Include="Assets\Resources\Scripts\Shaders\Steve.shader" />
+     <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\LightWrapping.shader" />
      <None Include="Assets\Shaders\Wall_4_Cutout_1_Mat.shader" />
      <None Include="Assets\Shaders\Bones_1_Mat.shader" />
-     <None Include="Assets\Scripts\Shaders\Floor.shader" />
-     <None Include="Assets\Exploder\Exploder\3rd\P2T.txt" />
-     <None Include="Assets\ShaderForge\Example Assets\Shaders\VertexColorRounding.shader" />
-     <None Include="Assets\ShaderForge\Example Assets\Shaders\TessellationDisplacement.shader" />
+     <None Include="Assets\Resources\Scripts\Shaders\Floor.shader" />
+     <None Include="Assets\Plugins\Exploder\Exploder\3rd\P2T.txt" />
+     <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\VertexColorRounding.shader" />
+     <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\TessellationDisplacement.shader" />
      <None Include="Assets\Shaders\Switch_1_Mat.shader" />
-     <None Include="Assets\ShaderForge\Example Assets\Shaders\Tiles.shader" />
+     <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\Tiles.shader" />
      <None Include="Assets\Shaders\ColumnSquare_1_Mat.shader" />
      <None Include="Assets\Rewired\Documentation\ReleaseNotes.txt" />
      <None Include="Assets\Shaders\TombFancy_1_Mat.shader" />
      <None Include="Assets\Shaders\Zombie_Mat.shader" />
      <None Include="Assets\Shaders\Wall_8_1_Mat.shader" />
-     <None Include="Assets\Scripts\Shaders\MultiTexture.shader" />
+     <None Include="Assets\Resources\Scripts\Shaders\MultiTexture.shader" />
      <None Include="Assets\Shaders\TombBottom_1_Mat.shader" />
-     <None Include="Assets\ShaderForge\Example Assets\Shaders\PixelRotator.shader" />
-     <None Include="Assets\ShaderForge\Example Assets\Shaders\CustomLighting.shader" />
+     <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\PixelRotator.shader" />
+     <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\CustomLighting.shader" />
+ <Reference Include="Assembly-UnityScript-firstpass">
+ <HintPath>Z:/profiledata/Desktop/senior project/trunk/Library/ScriptAssemblies/Assembly-UnityScript-firstpass.dll</HintPath>
+ </Reference>
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.0/UnityEngine.UI.dll</HintPath>
  </Reference>
  <Reference Include="P2T">
- <HintPath>Z:/profiledata/Desktop/senior project/trunk/Assets/Exploder/Exploder/3rd/P2T.dll</HintPath>
+ <HintPath>Z:/profiledata/Desktop/senior project/trunk/Assets/Plugins/Exploder/Exploder/3rd/P2T.dll</HintPath>
  </Reference>
  <Reference Include="Rewired_Core">
  <HintPath>Z:/profiledata/Desktop/senior project/trunk/Assets/Rewired/Internal/Libraries/Runtime/Rewired_Core.dll</HintPath>
  </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="Assembly-CSharp-firstpass-vs.csproj">
+      <Project>{1ECCC056-403F-DE82-16EC-800D8F942A9F}</Project>      <Name>Assembly-CSharp-firstpass-vs</Name>    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
