Updated the traps so they no longer use the TrapController. Now they handle their creation and destruction. The Rogue now consumes mana when using his specialAttack as well as gaining mana when damaging enemies with attacks from behind dealing more damage and restoring more mana. Added a trigger collider to the Enemy prefab so that the Rogue's dash attack will work like its supposed to. The Woodsman can destroy Exploder objects like everyone else.

--- a/Assembly-CSharp-firstpass-vs.csproj
+++ b/Assembly-CSharp-firstpass-vs.csproj
@@ -100,11 +100,13 @@
      <None Include="Assets\Shaders\ReaperStatue_1_Mat.shader" />
      <None Include="Assets\Shaders\Table_1_Mat.shader" />
      <None Include="Assets\Shaders\SmallContainers_1_Mat.shader" />
+     <None Include="Assets\Shaders\Mat_RailingSegment_01.shader" />
      <None Include="Assets\Shaders\Steve 1.shader" />
      <None Include="Assets\Shaders\Wall_4_1_Mat.shader" />
      <None Include="Assets\Shaders\Floor_1_Mat.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\LightCone.shader" />
      <None Include="Assets\Plugins\Exploder\Demo\Standard Assets\Particles\Sources\Shaders\Particle Alpha Blend (Queue +100).shader" />
+     <None Include="Assets\Shaders\Mat_Tapestry_01.shader" />
      <None Include="Assets\Plugins\ShaderForge\Readme.txt" />
      <None Include="Assets\Shaders\ColumnRound_1_Mat_B.shader" />
      <None Include="Assets\Shaders\Wall_Doorway_1_Mat.shader" />
@@ -116,31 +118,40 @@
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\Vegetation.shader" />
      <None Include="Assets\Shaders\Scrolls_1_Mat.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\VertexAnimation.shader" />
+     <None Include="Assets\Shaders\Mat_Torture_Wheel.shader" />
+     <None Include="Assets\Shaders\Mat_Chest.shader" />
      <None Include="Assets\Shaders\ColumnsRuined_1_Mat.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\Cubemaps.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\Refraction.shader" />
      <None Include="Assets\Plugins\Exploder\Demo\Shaders\VertexColor.shader" />
+     <None Include="Assets\Shaders\Mat_Crate_a.shader" />
      <None Include="Assets\Shaders\TombTop_1_Mat.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\Parallax.shader" />
      <None Include="Assets\Shaders\Steve.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\LightWrapping.shader" />
      <None Include="Assets\Shaders\Wall_4_Cutout_1_Mat.shader" />
      <None Include="Assets\Shaders\Bones_1_Mat.shader" />
+     <None Include="Assets\Shaders\SpikeTrap_1_Mat.shader" />
+     <None Include="Assets\Shaders\Mat_SM_Barrel.shader" />
      <None Include="Assets\Shaders\Floor.shader" />
      <None Include="Assets\Plugins\Exploder\Exploder\3rd\P2T.txt" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\VertexColorRounding.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\TessellationDisplacement.shader" />
+     <None Include="Assets\Shaders\Mat_Carpet.shader" />
      <None Include="Assets\Shaders\Switch_1_Mat.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\Tiles.shader" />
      <None Include="Assets\Shaders\ColumnSquare_1_Mat.shader" />
      <None Include="Assets\Rewired\Documentation\ReleaseNotes.txt" />
+     <None Include="Assets\Shaders\Mat_Potion_01.shader" />
      <None Include="Assets\Shaders\TombFancy_1_Mat.shader" />
      <None Include="Assets\Shaders\Zombie_Mat.shader" />
      <None Include="Assets\Shaders\Wall_8_1_Mat.shader" />
+     <None Include="Assets\Shaders\Mat_CoatOfArms.shader" />
      <None Include="Assets\Shaders\MultiTexture.shader" />
      <None Include="Assets\Shaders\TombBottom_1_Mat.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\PixelRotator.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\CustomLighting.shader" />
+     <None Include="Assets\Shaders\Mat_Padlock.shader" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.0/UnityEngine.UI.dll</HintPath>
  </Reference>
