Woodsman gon nuts yo

--- a/Assembly-CSharp-Editor-vs.csproj
+++ b/Assembly-CSharp-Editor-vs.csproj
@@ -54,6 +54,7 @@
      <Compile Include="Assets\Rewired\Internal\Scripts\Editor\CustomInspectors\InputManagerInspector.cs" />
      <Compile Include="Assets\Rewired\Internal\Scripts\Editor\UnityEditorBridge.cs" />
      <None Include="Assets\Shaders\Mat_SM_OpenBarrel.shader" />
+     <None Include="Assets\Shaders\Mat_GoldBar_1.shader" />
      <None Include="Assets\Shaders\Mat_SM_Turkey.shader" />
      <None Include="Assets\Shaders\Bookshelf_1_Mat.shader" />
      <None Include="Assets\Shaders\IceShader.shader" />
@@ -75,6 +76,7 @@
      <None Include="Assets\Shaders\Mat_Fireplace.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\LightCone.shader" />
      <None Include="Assets\Shaders\Mat_JudasCradle1.shader" />
+     <None Include="Assets\Shaders\Mat_FireOuter.shader" />
      <None Include="Assets\Shaders\Chain.shader" />
      <None Include="Assets\Shaders\Mat_Tapestry_01.shader" />
      <None Include="Assets\Plugins\ShaderForge\Readme.txt" />
@@ -103,7 +105,7 @@
      <None Include="Assets\Shaders\Bread.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\Cubemaps.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\Refraction.shader" />
-     <None Include="Assets\Resources\Prefabs\Environment\Resources\Map_04_T_N.txt" />
+     <None Include="Assets\Shaders\Mat_Chandelier_1.shader" />
      <None Include="Assets\Shaders\StoneSingles_1_Mat.shader" />
      <None Include="Assets\Shaders\Mat_Crate_a.shader" />
      <None Include="Assets\Shaders\Mat_JudasCradle3.shader" />
@@ -153,6 +155,9 @@
      <None Include="Assets\Shaders\Mat_WineRack.shader" />
      <None Include="Assets\Shaders\Mat_Dust.shader" />
      <None Include="Assets\Shaders\Mat_AM_Key_A.shader" />
+     <None Include="Assets\Shaders\Mat_Coins_1.shader" />
+     <None Include="Assets\Shaders\Mat_Fire.shader" />
+     <None Include="Assets\Shaders\Mat_Rubble_01.shader" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.1/UnityEngine.UI.dll</HintPath>
  </Reference>
@@ -160,16 +165,16 @@
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.1/Editor/UnityEditor.UI.dll</HintPath>
  </Reference>
  <Reference Include="P2T">
- <HintPath>Z:/profiledata/Desktop/senior project/trunk/Assets/Exploder/3rd/P2T.dll</HintPath>
+ <HintPath>C:/Users/SeniorProj/Desktop/senior project/trunk/Assets/Exploder/3rd/P2T.dll</HintPath>
  </Reference>
  <Reference Include="ShaderForge">
- <HintPath>Z:/profiledata/Desktop/senior project/trunk/Assets/Plugins/ShaderForge/Editor/Code/ShaderForge.dll</HintPath>
- </Reference>
- <Reference Include="Rewired_Core">
- <HintPath>Z:/profiledata/Desktop/senior project/trunk/Assets/Rewired/Internal/Libraries/Runtime/Rewired_Core.dll</HintPath>
+ <HintPath>C:/Users/SeniorProj/Desktop/senior project/trunk/Assets/Plugins/ShaderForge/Editor/Code/ShaderForge.dll</HintPath>
  </Reference>
  <Reference Include="Rewired_Editor">
- <HintPath>Z:/profiledata/Desktop/senior project/trunk/Assets/Rewired/Internal/Libraries/Editor/Rewired_Editor.dll</HintPath>
+ <HintPath>C:/Users/SeniorProj/Desktop/senior project/trunk/Assets/Rewired/Internal/Libraries/Editor/Rewired_Editor.dll</HintPath>
+ </Reference>
+ <Reference Include="Rewired_Core">
+ <HintPath>C:/Users/SeniorProj/Desktop/senior project/trunk/Assets/Rewired/Internal/Libraries/Runtime/Rewired_Core.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.Graphs">
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEditor.Graphs.dll</HintPath>
