--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -75,6 +75,7 @@
      <Compile Include="Assets\Resources\Scripts\Characters\Sorceress\MeteorController.cs" />
      <Compile Include="Assets\Resources\Scripts\Characters\Sorceress\Sorcerer.cs" />
      <Compile Include="Assets\Resources\Scripts\Characters\Warrior\Warrior.cs" />
+     <Compile Include="Assets\Resources\Scripts\Characters\Woodsman\BasicArrow.cs" />
      <Compile Include="Assets\Resources\Scripts\Characters\Woodsman\HawkAI2.cs" />
      <Compile Include="Assets\Resources\Scripts\Characters\Woodsman\Woodsman.cs" />
      <Compile Include="Assets\Resources\Scripts\Characters\Woodsman\bombBehavior.cs" />
@@ -134,6 +135,7 @@
      <Compile Include="Assets\Rewired\Examples\Shared\Scripts\Bullet.cs" />
      <Compile Include="Assets\Rewired\Internal\Scripts\InputManager.cs" />
      <None Include="Assets\Shaders\Mat_SM_OpenBarrel.shader" />
+     <None Include="Assets\Shaders\Mat_GoldBar_1.shader" />
      <None Include="Assets\Shaders\Mat_SM_Turkey.shader" />
      <None Include="Assets\Shaders\Bookshelf_1_Mat.shader" />
      <None Include="Assets\Shaders\IceShader.shader" />
@@ -155,6 +157,7 @@
      <None Include="Assets\Shaders\Mat_Fireplace.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\LightCone.shader" />
      <None Include="Assets\Shaders\Mat_JudasCradle1.shader" />
+     <None Include="Assets\Shaders\Mat_FireOuter.shader" />
      <None Include="Assets\Shaders\Chain.shader" />
      <None Include="Assets\Shaders\Mat_Tapestry_01.shader" />
      <None Include="Assets\Plugins\ShaderForge\Readme.txt" />
@@ -183,7 +186,7 @@
      <None Include="Assets\Shaders\Bread.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\Cubemaps.shader" />
      <None Include="Assets\Plugins\ShaderForge\Example Assets\Shaders\Refraction.shader" />
-     <None Include="Assets\Resources\Prefabs\Environment\Resources\Map_04_T_N.txt" />
+     <None Include="Assets\Shaders\Mat_Chandelier_1.shader" />
      <None Include="Assets\Shaders\StoneSingles_1_Mat.shader" />
      <None Include="Assets\Shaders\Mat_Crate_a.shader" />
      <None Include="Assets\Shaders\Mat_JudasCradle3.shader" />
@@ -233,14 +236,17 @@
      <None Include="Assets\Shaders\Mat_WineRack.shader" />
      <None Include="Assets\Shaders\Mat_Dust.shader" />
      <None Include="Assets\Shaders\Mat_AM_Key_A.shader" />
+     <None Include="Assets\Shaders\Mat_Coins_1.shader" />
+     <None Include="Assets\Shaders\Mat_Fire.shader" />
+     <None Include="Assets\Shaders\Mat_Rubble_01.shader" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.1/UnityEngine.UI.dll</HintPath>
  </Reference>
  <Reference Include="P2T">
- <HintPath>Z:/profiledata/Desktop/senior project/trunk/Assets/Exploder/3rd/P2T.dll</HintPath>
+ <HintPath>C:/Users/SeniorProj/Desktop/senior project/trunk/Assets/Exploder/3rd/P2T.dll</HintPath>
  </Reference>
  <Reference Include="Rewired_Core">
- <HintPath>Z:/profiledata/Desktop/senior project/trunk/Assets/Rewired/Internal/Libraries/Runtime/Rewired_Core.dll</HintPath>
+ <HintPath>C:/Users/SeniorProj/Desktop/senior project/trunk/Assets/Rewired/Internal/Libraries/Runtime/Rewired_Core.dll</HintPath>
  </Reference>
   </ItemGroup>
   <ItemGroup>
